<resources>
    <string name="app_name">BlueMarket</string>
    <string name="nav_home">HOME</string>
    <string name="nav_category">CATEGORY</string>
    <string name="nav_cart">CART</string>
    <string name="nav_user">MY PROFILE</string>
    <string name="search_main">Search in all BlueMarket products…</string>
    <string name="see_all_products">"See all similar products >"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_seeallproducts">See all Products ></string>
    <string name="add_to_cart">Add to cart</string>
    <string name="description">"Description: "</string>
    <string name="category">"Category: "</string>
    <string name="all_products_list">All Products List</string>
    <string name="no_account">Don\'t have an account?!</string>
    <string name="signup">SignUp Here!!</string>
    <string name="signup_header">SignUp to BlueMarket . . .</string>
    <string name="signup_button">SignUp</string>
    <string name="congrats">Congratulations!! SignUp Successful \n You can now Login…</string>
    <string name="welcome">"Welcome to "</string>
    <string name="bluemarket">Blue Market</string>
    <string name="login_error">Username or Password Incorrect!! \n Please try again…</string>
    <string name="cart_total_price">Total Price:</string>
    <string name="btn_cart_payment">payment</string>
    <string name="empty_cart">Your cart is empty…</string>
    <string name="cart_item_price">Price:</string>
    <string name="cart_item_ordered_num">"Ordered Number: "</string>
    <string name="cart_item_total_price">Total Price:</string>
    <string name="your_cart">Current cart list</string>
    <string name="total_quantity">Total Quantity:</string>
    <string name="detail_ordered_number">Ordered Number:</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password">Password</string>
    <string name="re_enter_pass">Re-Enter Password</string>
    <string name="try_again">Try again !!</string>
    <string name="username">Username</string>

</resources>