<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    android:background="@drawable/shape_image"
    android:layout_height="150dp">

    <ImageView
        android:id="@+id/img_cart_product"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_cart_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:justificationMode="inter_word"
        android:maxLines="3"
        android:minLines="3"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_cart_product"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="LG LED TV 48'" />

    <TextView
        android:id="@+id/txt_cart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:padding="2dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="200" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="$"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cart_price"
        app:layout_constraintStart_toEndOf="@+id/txt_cart_price"
        app:layout_constraintTop_toTopOf="@+id/txt_cart_price" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textSize="13sp"
        android:text="@string/cart_item_price"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cart_price"
        app:layout_constraintEnd_toStartOf="@+id/txt_cart_price"
        app:layout_constraintTop_toTopOf="@+id/txt_cart_price" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:text="@string/cart_item_ordered_num"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/txt_cart_title"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
        android:id="@+id/txt_cart_number"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/img_cart_product_minus"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:text="3" />

    <TextView
        android:id="@+id/txt_cart_item_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="600" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/cart_item_total_price"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cart_item_total_price"
        app:layout_constraintEnd_toStartOf="@+id/txt_cart_item_total_price"
        app:layout_constraintTop_toTopOf="@+id/txt_cart_item_total_price" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_cart_product"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="$"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cart_item_total_price"
        app:layout_constraintStart_toEndOf="@+id/txt_cart_item_total_price" />

    <ImageView
        android:id="@+id/img_cart_product_minus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:visibility="visible"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cart_number"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:srcCompat="@drawable/ic_baseline_indeterminate_check_box_24" />

    <ImageView
        android:id="@+id/img_cart_product_plus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cart_number"
        app:layout_constraintStart_toEndOf="@+id/txt_cart_number"
        app:srcCompat="@drawable/ic_baseline_add_box_24" />

    <ImageView
        android:id="@+id/img_cart_product_remove"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cart_number"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/txt_cart_number"
        app:srcCompat="@drawable/ic_baseline_delete_forever_24" />
</androidx.constraintlayout.widget.ConstraintLayout>